classDiagram
    direction TB

    class Character {
        <<interface>>
        +getAbilities() string
        +~Character()
    }

    class Mario {
        +getAbilities() string
    }

    class Character_Decorator {
        #Character* character
        +Character_Decorator(Character* c)
    }

    class HeightUp {
        +HeightUp(Character* c)
        +getAbilities() string
    }

    class GunPowerUp {
        +GunPowerUp(Character* c)
        +getAbilities() string
    }

    class StarPowerUp {
        +StarPowerUp(Character* c)
        +getAbilities() string
        +~StarPowerUp()
    }

    Character <|-- Mario
    Character <|-- Character_Decorator
    Character_Decorator <|-- HeightUp
    Character_Decorator <|-- GunPowerUp
    Character_Decorator <|-- StarPowerUp

    Character_Decorator o--> Character : wraps

---
flowchart LR
    A[Mario] --> B[HeightUp]
    B --> C[GunPowerUp]
    C --> D[StarPowerUp]

    D --> E["Mario with HeightUp with Gun with Star Power (Limited Time)"]
